--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -5,10 +5,12 @@ compatibility_date = "2024-12-01"
 [vars]
 DOMAIN = "truspaix.com"
 
-# 数据库连接字符串 - 使用 secrets 存储
-# 运行: npx wrangler secret put DATABASE_URL
+# D1 数据库绑定
+[[d1_databases]]
+binding = "DB"
+database_name = "ccmail-db"
+database_id = "2ade9123-99ae-4bf0-995f-19b34661113f"
 
-# 绑定 Hyperdrive (可选，用于连接池优化)
-# [[hyperdrive]]
-# binding = "HYPERDRIVE"
-# id = "your-hyperdrive-id"
+# 可选：PostgreSQL/Neon 数据库（如果不使用 D1）
+# 运行: npx wrangler secret put DATABASE_URL
+# 值: postgresql://postgres:nKuWVahUmQEPOVxNYVSAoNZlYKUUyGwa@crossover.proxy.rlwy.net:45178/railway
